# VisiterManageSystem

./: CMakeLists.txt  README.md  main.cpp  大作业报告.doc
Date/: Date.cpp  Date.h
Info/: Info.txt
People/: Graduate.cpp  Graduate.h  GraduateTeacher.cpp  GraduateTeacher.h  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h
Surface/: Surface.cpp  Surface.h
